# Pythinker-Code

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  pr-title-checker-config.json
.github/workflows/: ci-pythinker-cli.yml  ci-pythinker-host.yml  dependabot-review-required.yml  release-pythinker-cli.yml
docs/en/reference/: telemetry.md
docs/superpowers/plans/: 2026-05-07-codex-terminal-ui-followup.md  2026-05-07-readable-terminal-reports.md
docs/superpowers/specs/: 2026-05-07-codex-terminal-ui-followup-design.md  2026-05-07-readable-terminal-reports-design.md
examples/feedback-worker/: README.md  package.json  wrangler.jsonc
examples/feedback-worker/src/: index.ts
scripts/: install.ps1  install.sh
sdks/pythinker-sdk/: CHANGELOG.md  pyproject.toml
src/pythinker_code/: __main__.py  app.py  config.py  events.py  extensions.py  llm.py
src/pythinker_code/acp/: host.py  session.py  tools.py
src/pythinker_code/agents/default/: agent.yaml  coder.yaml  explore.yaml  implementer.yaml  plan.yaml  review.yaml  system.md  verifier.yaml
src/pythinker_code/auth/: oauth.py  openai.py  platforms.py
src/pythinker_code/background/: manager.py  models.py  store.py
src/pythinker_code/cli/: _lazy_group.py  update.py
src/pythinker_code/hooks/: engine.py  runner.py
src/pythinker_code/plugin/: manager.py
src/pythinker_code/soul/: agent.py  btw.py  permission.py  pythinkersoul.py  toolset.py
src/pythinker_code/subagents/: builder.py  models.py  runner.py  store.py
src/pythinker_code/telemetry/: config.py  crash.py  errors.py  otel.py  sentry.py
src/pythinker_code/tools/: __init__.py
src/pythinker_code/tools/agent/: __init__.py  description.md
src/pythinker_code/tools/ask_user/: __init__.py
src/pythinker_code/tools/file/: __init__.py  glob.py  grep_local.py  read.py  read_media.py  replace.py  write.py
src/pythinker_code/tools/plan/: __init__.py  enter.py  handoff.py
src/pythinker_code/tools/shell/: __init__.py
src/pythinker_code/tools/web/: fetch.py
src/pythinker_code/ui/: theme.py  tui_config.py
src/pythinker_code/ui/shell/: __init__.py  keymap.py  placeholders.py  prompt.py  selector.py  slash.py  update.py
src/pythinker_code/ui/shell/components/: __init__.py  base.py  bash_execution.py  diff.py  key_hints.py  render_utils.py  tool_execution.py
src/pythinker_code/ui/shell/selectors/: __init__.py  extension.py  oauth.py  settings.py  show_images.py  theme.py  thinking.py
src/pythinker_code/ui/shell/tool_renderers/: __init__.py  _render_utils.py  agent.py  ask_user.py  background.py  bash.py  edit.py  find.py  generic.py  grep.py  plan.py  read.py  think.py  todo.py  web.py  write.py
src/pythinker_code/ui/shell/visualize/: _blocks.py  _live_view.py  _worklog.py
src/pythinker_code/utils/: logging.py
src/pythinker_code/utils/rich/: markdown.py
src/pythinker_code/vis/: app.py
src/pythinker_code/vis/api/: sessions.py
src/pythinker_code/web/: app.py
src/pythinker_code/web/api/: open_in.py  sessions.py
src/pythinker_code/wire/: server.py
tasks/: port-bk-box-agent-features.md
tests/: test_events.py  test_extensions.py  test_installation_docs.py
tests/background/: test_manager.py  test_task_metadata.py
tests/core/: test_agent_spec.py  test_config.py  test_create_llm.py  test_default_agent.py  test_dynamic_injection_hooks.py  test_openai_provider.py  test_permission_profiles.py  test_plan_handoff.py  test_plugin_manager.py  test_pythinkersoul_retry_recovery.py  test_subagent_builder.py  test_wire_server_steer.py  test_write_file_plan_mode.py
tests/e2e/: shell_pty_helpers.py  test_file_mention_e2e.py  test_shell_modal_e2e.py  test_shell_pty_e2e.py  test_slash_completion_enter_tmux.py  test_subagent_smoke_e2e.py
tests/telemetry/: test_crash.py  test_errors.py  test_instrumentation.py  test_otel_resource.py  test_sentry_filters.py
tests/tools/: test_agent_tool.py  test_ask_user.py  test_fetch_url.py  test_grep.py  test_plan_yolo.py  test_smart_search.py  test_tool_descriptions.py  test_tool_schemas.py
tests/ui/: test_update_gate.py
tests/ui_and_conv/: test_plan_display_panel.py  test_prompt_clipboard.py  test_prompt_history.py  test_prompt_placeholders.py  test_prompt_tips.py  test_selector_groups.py  test_selectors_simple.py  test_settings_selector.py  test_shell_feedback_slash.py  test_shell_update.py  test_shell_welcome_info.py  test_status_block.py  test_streaming_content_block.py  test_tool_call_block.py  test_tui_blocks_integration.py  test_tui_card_selector.py  test_tui_components.py  test_tui_config_flag.py  test_tui_pi_keymap.py  test_tui_pi_tool_renderers.py  test_tui_render_snapshots.py  test_tui_theme_tokens.py  test_tui_tool_renderer_registry.py  test_worklog_render.py
tests/utils/: test_pyinstaller_utils.py  test_rich_markdown.py
vis/src/lib/: api.ts
