[project]
name = "pythinker-code"
version = "2.1.2"
description = "Pythinker Code is your next CLI agent."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Mohamed Elkholy", email = "moelkholy1995@gmail.com" }]
keywords = ["cli", "agent", "ai", "coding-assistant", "llm", "claude", "openai", "terminal"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]
dependencies = [
    "agent-client-protocol==0.8.0",
    "aiofiles>=24.0,<26.0",
    "aiohttp==3.13.3",
    "typer==0.21.1",
    "pythinker-core[contrib]==1.0.0",
    # notify-py (via batrachian-toad) caps loguru at <=0.6.0 on 3.14+.
    "loguru>=0.6.0,<0.7",
    "prompt-toolkit==3.0.52",
    "pillow==12.1.0",
    "pyyaml==6.0.3",
    "rich==14.2.0",
    "ripgrepy==2.2.0",
    "streamingjson==0.0.5",
    "trafilatura==2.0.0",
    # lxml is used by trafilatura/htmldate/justext; keep pinned for binary wheels.
    "lxml==6.0.2",
    "tenacity==9.1.2",
    "fastmcp==2.12.5",
    "pydantic==2.12.5",
    "httpx[socks]==0.28.1",
    "pythinker-host==1.0.0",
    "batrachian-toad==0.5.23; python_version >= \"3.14\"",
    "tomlkit==0.14.0",
    "jinja2==3.1.6",
    "pyobjc-framework-cocoa>=12.1 ; sys_platform == 'darwin'",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "scalar-fastapi>=1.8.2",
    "websockets>=14.0",
    "keyring>=25.7.0",
    "setproctitle>=1.3.0",
    # Telemetry: Sentry-protocol error reporting (Bugsink) + OTLP traces/logs/metrics (SigNoz).
    # Both default to pythinker-operated endpoints; opt out with PYTHINKER_DISABLE_TELEMETRY=1.
    "sentry-sdk>=2.20,<3",
    "opentelemetry-api>=1.30,<2",
    "opentelemetry-sdk>=1.30,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.30,<2",
]

[dependency-groups]
dev = [
    "pyinstaller==6.18.0",
    "inline-snapshot[black]>=0.31.1",
    "pyright>=1.1.409",
    "ty>=0.0.9",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]

[build-system]
requires = ["uv_build>=0.8.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["pythinker_code"]
source-exclude = ["examples/**/*", "tests/**/*", "src/pythinker_code/deps/**/*"]

[tool.uv.workspace]
members = [
    "packages/pythinker-core",
    "packages/pythinker-host",
    "sdks/pythinker-sdk",
]

[tool.uv.sources]
pythinker-core = { workspace = true }
pythinker-host = { workspace = true }
pythinker-code = { workspace = true }

[project.scripts]
pythinker = "pythinker_code.__main__:main"
pythinker-code = "pythinker_code.__main__:main"

[project.urls]
Homepage      = "https://github.com/mohamed-elkholy95/Pythinker-Code"
Repository    = "https://github.com/mohamed-elkholy95/Pythinker-Code"
Issues        = "https://github.com/mohamed-elkholy95/Pythinker-Code/issues"
Changelog     = "https://github.com/mohamed-elkholy95/Pythinker-Code/blob/main/CHANGELOG.md"
Documentation = "https://github.com/mohamed-elkholy95/Pythinker-Code#readme"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501"]
"tests_e2e/**/*.py" = ["E501"]
"src/pythinker_code/web/api/**/*.py" = ["B008"]  # FastAPI Depends() is standard usage

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.14"
include = [
    "src/**/*.py",
    "tests/**/*.py",
    "tests_ai/scripts/**/*.py",
    "tests_e2e/**/*.py",
]
strict = ["src/pythinker_code/**/*.py"]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
include = [
    "src/**/*.py",
    "tests/**/*.py",
    "tests_ai/scripts/**/*.py",
    "tests_e2e/**/*.py",
]

[tool.typos.files]
extend-exclude = ["pythinker.spec", "pyinstaller.py"]

[tool.typos.default.extend-words]
datas = "datas"
Seeked = "Seeked"
seeked = "seeked"
iterm = "iterm"
# Verbatim pyright CLI output ("0 informations") quoted in docs.
informations = "informations"
